fix signature item CSS classes and spacing

--- a/share/ocamlary.css
+++ b/share/ocamlary.css
@@ -59,14 +59,18 @@
 }
 
 .ocamlary-doc .module,
-.ocamlary-doc .module_type,
+.ocamlary-doc .modtype,
 .ocamlary-doc .exception,
 .ocamlary-doc .type,
-.ocamlary-doc .val {
+.ocamlary-doc .val,
+.ocamlary-doc .ext,
+.ocamlary-doc .exn,
+.ocamlary-doc .class,
+.ocamlary-doc .classtype {
     margin-bottom: 1em;
 }
 
-.ocamlary-doc .constr,
+.ocamlary-doc .cons,
 .ocamlary-doc .field {
     padding-left: 1.5em;
 }
